# transit_opt

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt
.github/: ISSUE_TEMPLATE.md
.github/workflows/: test.yml
configs/: README.md  config_basic.yaml  config_template.yaml
docs/: index.md  installation.md  usage.md
notebooks/: 1_prep_gtfs.ipynb  2_optimisation.ipynb  2a_optimisation_basic.ipynb  2b_optimisation_extra_functionality.ipynb  2b_test_pop_weighting.ipynb  2c_optimisation_multi_swarm.ipynb  2d_optimisation_joint_PT_DRT.ipynb  2e_optimization_with_seeding.ipynb  3_solutions_to_gtfs.ipynb  3_write_solutions_to_file.ipynb  3b_fix_directions.ipynb  4_validate_gtfs_io.ipynb  test_genet.ipynb  x_boundary_service_patterns.ipynb
scripts/: run.py  run_baseline.py
src/transit_opt/: __init__.py  cli.py  logging.py
src/transit_opt/gtfs/: drt.py  gtfs.py  solution_manager.py  solution_sampling.py
src/transit_opt/optimisation/config/: __init__.py  config_manager.py
src/transit_opt/optimisation/objectives/: __init__.py  base.py  service_coverage.py  waiting_time.py
src/transit_opt/optimisation/problems/: base.py  transit_problem.py
src/transit_opt/optimisation/runners/: __init__.py  pso_runner.py
src/transit_opt/optimisation/spatial/: __init__.py  boundaries.py  zoning.py
src/transit_opt/optimisation/utils/: __init__.py  demand.py  equity.py  fleet_calculations.py  population.py  population_builder.py  solution_loader.py
src/transit_opt/preprocessing/: prepare_gtfs.py
src/transit_opt/reconstruction/: GTFSReconstructor.py
tests/: __init__.py  conftest.py  test_config_manager.py  test_constraints.py  test_drt.py  test_equity.py  test_gtfs.py  test_prepare_gtfs.py  test_pso_runner.py  test_sampling.py  test_service_coverage.py  test_solution_manager.py  test_transit_opt.py  test_transit_problem.py  test_waiting_time.py  test_zoning.py
tests/data/drt/: drt_duke_1.dbf  drt_duke_1.shp  drt_duke_1.shx  drt_duke_2.shp  drt_duke_2.shx  drt_solution.json
tests/fixtures/: __init__.py
