[project]
name = "transit_opt"
version = "0.1.0"
description = "Optimisation tool for public transit network design"
readme = "README.md"
authors = [
  {name = "Hussein Mahfouz", email = "husseinmahfouz93@gmail.com"}
]
maintainers = [
  {name = "Hussein Mahfouz", email = "husseinmahfouz93@gmail.com"}
]
classifiers = [

]
license = {text = "MIT"}
dependencies = [
  "typer",
  "pandas (>=2.3.1,<3.0.0)"
]
requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "coverage",  # testing
    "pytest",  # testing
    "ruff",  # linting
    "ty", # checking types
    "ipdb"    
]

[project.urls]

bugs = "https://github.com/Hussein-Mahfouz/transit_opt/issues"
changelog = "https://github.com/Hussein-Mahfouz/transit_opt/blob/master/changelog.md"
homepage = "https://github.com/Hussein-Mahfouz/transit_opt"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]
transit_opt = "transit_opt.cli:app"

[tool.ty]
# All rules are enabled as "error" by default; no need to specify unless overriding.
# Example override: relax a rule for the entire project (uncomment if needed).
# rules.TY015 = "warn"  # For invalid-argument-type, warn instead of error.

# Optional: Per-directory overrides for flexibility in boilerplates with tests or examples.
[[tool.ty.overrides]]
match = ["tests/**.py"]
rules.TY016 = "ignore"  # Ignore invalid-assignment in tests, e.g., for dynamic fixtures.
rules.TY029 = "ignore"  # Ignore invalid-return-type in tests.

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

[tool.uv]
package = true
