[project]
name = "transit_opt"
version = "0.1.0"
description = "Optimisation tool for combined PT frequency setting and DRT fleet sizing"
readme = "README.md"
authors = [
  {name = "Hussein Mahfouz", email = "husseinmahfouz93@gmail.com"}
]
maintainers = [
  {name = "Hussein Mahfouz", email = "husseinmahfouz93@gmail.com"}
]
license = {text = "MIT"}

# ===== CORE DEPENDENCIES =====
dependencies = [
    # CLI
    "typer>=0.16.1",

    # Data manipulation
    "pandas>=2.3.1,<3.0.0",
    "numpy<2",  # Keep numpy<2 for compatibility

    # Geospatial
    "geopandas>=1.1.1",
    "rasterstats>=0.20.0,<0.21.0",
    "shapely>=2.0.0",
    "pyproj>=3.6.0",
    "libpysal>=4.12.1",
    "rasterio>=1.3.0",

    # Transit/GTFS
    "gtfs-kit>=10.3.1",

    # Optimization
    "pymoo>=0.6.1.5",
    "autograd>=1.8.0",

    # Config/YAML
    "pyyaml>=6.0",

    # Progress bars
    "alive-progress>=3.3.0",

    # Real-time system utilisation
    "psutil>=5.9.0"
]

requires-python = ">= 3.10"

[project.optional-dependencies]
test = [
    "pytest>=8.4.1",
    "pytest-cov",
    "coverage",
    "ruff",
]

dev = [
    "ipdb",
    "jupyter",
    "matplotlib",
]

[project.urls]
bugs = "https://github.com/Hussein-Mahfouz/transit_opt/issues"
homepage = "https://github.com/Hussein-Mahfouz/transit_opt"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]

[project.scripts]
transit_opt = "transit_opt.cli:app"

# ===== RUFF CONFIG =====
[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
]

# ===== UV CONFIG =====
[tool.uv]
package = true

[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"